GNOME Bugzilla – Bug 599388
Sendto Thunderbird fails if comma in filename
Last modified: 2009-10-30 15:16:03 UTC
Created attachment 146088 [details] [review] Patch to escape comma for thunderbird Can't send files to Thunderbird that have a comma (,) in the filename because in Thunderbird's syntax the comma separates attachments, so it assumes two or more files which of course don't exist. Therefor commas have to be escaped (patch attached).
Created attachment 146166 [details] [review] Patch to escape comma for thunderbird, 2nd version Removed if-condition because it is always true.
Fixed differently. We already escape ampersands in nautilus-sendto-command.c, so just add commas escaping there.