Escape commas as well as ampersands in filenames

For Thunderbird to parse filenames properly.

https://bugzilla.gnome.org/show_bug.cgi?id=599388